fix: contrast issues in inspector

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -1,5 +1,6 @@
 .GradientText {
     font-weight: 800;
+    color: black;
     background: linear-gradient(230deg, #4FEAA9 10.89%, #57B7D9 60.95%);
     background-clip: text;
     -webkit-background-clip: text;
